# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  catalog.json  index.html  styles.css
backend/: database.py  main.py  pyproject.toml
backend/routers/: chat.py  health.py
backend/tests/: conftest.py  test_chat.py  test_database.py  test_health.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: AI-Addendum.md  BAA.md  LICENSE.txt
